crates/parser/tests/cases/snapshots/cases__errors__fn_unsafe_pub.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(fn_unsafe_pub), module::parse_module,\n    \"unsafe pub fn f() {\\n  return 5 }\")"

---
error: `pub` visibility modifier must come before `unsafe`
  ┌─ fn_unsafe_pub:1:1
  │
1 │ unsafe pub fn f() {
  │ ^^^^^^^^^^ use `pub unsafe` here


